--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,28 @@
 # Site settings
-title: Your awesome title
-tagline: And Tagline
-email: gayanvirajith@gmail.com
+title: Steve Hartzog
+tagline: '' 
+email: shartzog@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Hi, I’m a professional UI/UX designer and web developer. 
-  I love being minimal and creative.
-baseurl: "/gaya" # the subpath of your site, e.g. /blog/
-url: "http://gayan.me" # the base hostname & protocol for your site
-logourl: /assets/images/logo.png # Site logo
-author: "Tom Warlker"
-author_thumbnail: "/assets/images/avatar.jpg" # Author avatar
+  Professional JavaScript web developer... who simply can't wait for JSP to die the horrible death it deserves and thinks it would be a fine idea if Microsoft bought Canonical.
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "http://127.0.0.1:4000" # the base hostname & protocol for your site
+logourl: /images/logo.png # Site logo
+author: "Steve Hartzog"
+author_thumbnail: "/images/avatar.jpg" # Author avatar
 # Theme customization - please change from the defaults!
 theme:
-  # Color for sidebar bar, links, etc
-  highlight_color: "#205081" #205081" # "#272935"
+  # Color for links, etc
+  highlight_color: "yellow" #205081" #205081" # "#272935"
+  # Color for sidebar bar
+  highlight_color: "black"
   # Social media links, leave blank to ignore
   social: 
-    github: gayanvirajith
-    twitter: gayanvirajith
-    facebook: gayanvirajith
-    gplus: +gayanvirajith
-    # dribble: gayanvirajith
-    pinterest: gayanvirajith
+    github: SteveHartzog
+    twitter: shartzog
+    # facebook: 
+    gplus: +SteveHartzog
+    # dribble: 
+    # pinterest: 
 
   # Enable share buttons on post footer
   show_share_buttons: true
@@ -30,7 +31,7 @@ theme:
   show_author_info: true
 
   # Disqus comments manager - shortname
-  # disqus_shortname: gaya-webcreate
+  # disqus_shortname: zog-webcreate
 
   # Google Analytics/Webmaster key, leave blank to ignore
   google_analytics_key: 
@@ -38,6 +39,8 @@ theme:
 
 # Build settings
 markdown: kramdown
+source: src
+destination: _site
 
 # Permalinks
 permalink:        pretty
@@ -57,5 +60,5 @@ exclude:
 
 # Sass conversion configs
 sass:
-  sass_dir: assets/css/_sass
+  sass_dir: styles/
   style: :compressed
