--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: shartzog@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Professional JavaScript web developer... who simply can't wait for JSP to die the horrible death it deserves and thinks it would be a fine idea if Microsoft bought Canonical.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://127.0.0.1:4000" # the base hostname & protocol for your site
+url: "" # the base hostname & protocol for your site
 logourl: /images/logo.png # Site logo
 author: "Steve Hartzog"
 author_thumbnail: "/images/avatar.jpg" # Author avatar
