--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ theme:
   # disqus_shortname: zog-webcreate
 
   # Google Analytics/Webmaster key, leave blank to ignore
-  google_analytics_key: 
+  google_analytics_key: UA-72529257-1
   google_webmaster_key: 
 
 # Build settings
